# h5m-reader

./: .gitignore  .gitmodules  CMakeLists.txt  REAMDE.md
src/: MOABDirectAccess.cpp  MOABDirectAccess.h  dda.hlsli  deviceCode.h  deviceCode.hlsl  main.cpp  mb_util.hpp  raygenVoxelize.hlsl  rng.h  sharedCode.h
